fix alignment issues

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@
 }
 
 body {	
-	min-width: 800px;
+	min-width: 1400px;
 	min-height: 600px;
 	padding: 30px 30px 0 30px;
 	background-color: #000;
@@ -120,6 +120,7 @@ header {
 	justify-content: space-between;
 	text-transform: uppercase;
 	margin-bottom: 40px;
+	white-space: nowrap;
 }
 
 .header-left > a, .header-left > span {
@@ -158,6 +159,7 @@ header {
 	animation: show-top 2s;
 	margin-top: -50px;
 	height: 250px;
+	width: 40%;
 }
 
 .intro-text {
@@ -264,19 +266,15 @@ button:focus {
 	outline:0;
 }
 
-.button-container {
-	display: flex;
-	align-items: center;
-}
 
 .prev {
 	left: 30px;
-	padding: 50px 100px 50px 0;
+	padding: 250px 100px 250px 0;
 }
 
 .next {
 	right: 30px;
-	padding: 50px 0 50px 100px;
+	padding: 250px 0 250px 100px;
 }
 
 .prev, .next {
@@ -376,7 +374,6 @@ button:focus {
 
 .about-text-container {
 	width: 60%;
-	position: absolute;
 	text-align: center;
 }
 
